--- a/index.html
+++ b/index.html
@@ -24,39 +24,39 @@
               </svg></a>
         </nav>
     </header>
-    <section id="home" class="bg-1 home">
+    <section id="home" class="bg-1 home section1">
         <img class="heroimage" src="https://vijaysatheesh.vercel.app/pp.jpeg" alt="" >
-        <h1 class="text-center herohead">I am Vijay Satheesh</h1>
-        <p class="text-center herosubhead">webdev appdev fundev</p>
+        <h1 class="text-center herohead fade-in">I am Vijay Satheesh</h1>
+        <p class="text-center herosubhead fade-in ">webdev appdev fundev</p>
     </section >
 
-    <section id="about" class="bg-2">
+    <section id="about" class="bg-2 section2">
         <div class="container">
-            <h2 class="text-center sectionhead">About</h2>
+            <h2 class="text-center sectionhead fade-in">About</h2>
             <div class="split">
-                <img  src="https://wallpaperaccess.com/full/36354.jpg" alt="" >
-                <p class="paratext">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores eum a, accusantium nihil quaerat dolor exercitationem suscipit id voluptatem odit ullam dicta aliquam sit esse. Nihil aperiam corrupti distinctio tenetur incidunt sapiente doloremque ipsa optio quos magnam fugiat reiciendis, deleniti alias eligendi earum deserunt voluptatem, architecto, harum porro. Nihil rerum dolor eaque tenetur minus saepe iusto dolores ad sunt deleniti!</p>
+                <img class="slide-in from-left fade-in" src="https://wallpaperaccess.com/full/36354.jpg" alt="" >
+                <p class="paratext fade-in slide-in from-right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores eum a, accusantium nihil quaerat dolor exercitationem suscipit id voluptatem odit ullam dicta aliquam sit esse. Nihil aperiam corrupti distinctio tenetur incidunt sapiente doloremque ipsa optio quos magnam fugiat reiciendis, deleniti alias eligendi earum deserunt voluptatem, architecto, harum porro. Nihil rerum dolor eaque tenetur minus saepe iusto dolores ad sunt deleniti!</p>
             </div>
         </div>
         
     </section>
 
-    <section id="exp" class="bg-3">
+    <section id="exp" class="bg-3 section3">
         <div class="container">
-            <h2 class="text-center sectionhead">Experiences</h2>
+            <h2 class="text-center sectionhead fade-in">Experiences</h2>
             <div class="split">
-                <p class="paratext">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores eum a, accusantium nihil quaerat dolor exercitationem suscipit id voluptatem odit ullam dicta aliquam sit esse. Nihil aperiam corrupti distinctio tenetur incidunt sapiente doloremque ipsa optio quos magnam fugiat reiciendis, deleniti alias eligendi earum deserunt voluptatem, architecto, harum porro. Nihil rerum dolor eaque tenetur minus saepe iusto dolores ad sunt deleniti!</p>
-                <img   src="https://wallpaperaccess.com/full/2559948.jpg" alt="" >
+                <p class="paratext slide-in from-left fade-in">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores eum a, accusantium nihil quaerat dolor exercitationem suscipit id voluptatem odit ullam dicta aliquam sit esse. Nihil aperiam corrupti distinctio tenetur incidunt sapiente doloremque ipsa optio quos magnam fugiat reiciendis, deleniti alias eligendi earum deserunt voluptatem, architecto, harum porro. Nihil rerum dolor eaque tenetur minus saepe iusto dolores ad sunt deleniti!</p>
+                <img class="slide-in from-right fade-in"  src="https://wallpaperaccess.com/full/2559948.jpg" alt="" >
             </div>
         </div>
     </section >
 
-    <section id="services" class="bg-4">
+    <section id="contact" class="bg-4 section4">
         <div class="container">
-            <h2 class="text-center sectionhead">Contact</h2>
+            <h2 class="text-center sectionhead fade-in">Contact</h2>
             <div class="split">
-                <img   src="https://cdn.wallpapersafari.com/23/43/8phWXR.jpg" alt="" >
-                <p class="paratext">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores eum a, accusantium nihil quaerat dolor exercitationem suscipit id voluptatem odit ullam dicta aliquam sit esse. Nihil aperiam corrupti distinctio tenetur incidunt sapiente doloremque ipsa optio quos magnam fugiat reiciendis, deleniti alias eligendi earum deserunt voluptatem, architecto, harum porro. Nihil rerum dolor eaque tenetur minus saepe iusto dolores ad sunt deleniti!</p>
+                <img class="slide-in from-left fade-in"  src="https://cdn.wallpapersafari.com/23/43/8phWXR.jpg" alt="" >
+                <p class="paratext slide-in from-right fade-in">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores eum a, accusantium nihil quaerat dolor exercitationem suscipit id voluptatem odit ullam dicta aliquam sit esse. Nihil aperiam corrupti distinctio tenetur incidunt sapiente doloremque ipsa optio quos magnam fugiat reiciendis, deleniti alias eligendi earum deserunt voluptatem, architecto, harum porro. Nihil rerum dolor eaque tenetur minus saepe iusto dolores ad sunt deleniti!</p>
             </div>
         </div>
     </section>
@@ -65,5 +65,6 @@
                 <p class="paratext text-center footertext">Made by Vijay with 😍 </p>
         </div>
     </footer>
+    <script src="io.js"></script>
 </body>
 </html>
